Fix squishy avatars

--- a/modules/app/App.css
+++ b/modules/app/App.css
@@ -336,6 +336,7 @@ body {
   box-shadow: 1px 2px 10px hsla(0, 0%, 0%, 0.25);
   border-radius: 50%;
   margin: 0 3rem;
+  flex: 0 0 200px;
 }
 
 .Meta_point {
